<resources>
    <string name="app_name">MauNyuciBeta</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_order">Order</string>
    <string name="title_layanan">Layanan</string>
    <string name="title_akun">Akun</string>
    <string name="todo">TODO</string>
    <string name="email_no_hp">Email/No Hp</string>
    <string name="masukkan_email_no_hp">Masukkan Email / No Hp</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_new_password">Masukkan New Password</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="masukkan_password_sebelumnya">Masukkan Password Sebelumnya</string>
    <string name="label_blocking_description">\"Aduuh maaf, server sedang sibuk, \n Silahkan coba kembali\"</string>
    <string name="label_here">disini</string>
    <string name="login_gagal">Yah, login gagal nih!!</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="password_sebelumnya">Password Sebelumnya</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun?&#160;</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="nama_laundry">Nama Laundry</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="buat_laundry_sekarang">Buat Laundry Sekarang</string>
    <string name="daftar_laundry">Daftar Laundry</string>
    <string name="sepertinya_kamu_tidak_terkoneksi">Sepertinya Kamu Tidak Terkoneksi</string>
    <string name="opps_koneksimu_terputus_nih">Opps, koneksimu terputus nih!</string>
    <string name="sepertinya_kamu_tidak_terkoneksi_dengan_internet_coba_cek_lagi_yuk">Sepertinya kamu tidak terkoneksi dengan internet, coba cek lagi yuk</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="label_selamat_datang">Selamat datang,</string>
    <string name="label_message_help_default">Halo,</string>
    <string name="bagikan_dengan">Bagikan Dengan</string>
    <string name="label_whatsapp_not_installed">Whatsapp belum terinstal</string>
    <string name="label_copyrigth">2021 | SP2K Mobile Team</string>
    <string name="label_masukan_email_yang_terdaftar">Masukan email yang terdaftar</string>
    <string name="label_format_email_tidak_sesuai">Format email tidak sesuai</string>
    <string name="label_masukan_akun_yang_sudah_terdaftar">Masukan akun yang sudah terdaftar</string>
    <string name="label_anda_belum_bergabung_yuk_gabung_natau_login_sekarang">Anda belum bergabung, yuk gabung\natau login sekarang</string>
    <string name="masukkan_no_handphone">Masukkan No Handphone</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar">Daftar</string>
    <string name="omset_hari_ini">Omset Hari Ini</string>
    <string name="rp">Rp</string>
    <string name="tambah_order">Tambah Order</string>
    <string name="selesai">Selesai</string>
    <string name="masuk">Masuk</string>
    <string name="siap_ambil">Siap Ambil</string>
    <string name="tunggu_sebentar_yaa">Tunggu Sebentar Yaa ...</string>
    <string name="pendapatanmu_mengingkat_hari_ini">Pendapatanmu mengingkat hari ini?</string>
    <string name="star_notice">*</string>
    <string name="profile">Profile</string>
    <string name="email_atau_no_hp_anda_tidak_sesuai">Email atau No Hp anda tidak sesuai</string>
    <string name="password_anda_tidak_sesuai">Password anda tidak sesuai</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="lupa_password_p">Lupa Password</string>
    <string name="title_activity_ubah_password">ubah_password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dua_juta">2.000.000</string>
</resources>