<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterStoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_20"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar_laundry"
            android:layout_marginStart="@dimen/margin_15"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/margin_20">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/ic_line_add_photo"
                android:contentDescription="@string/todo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/ic_add_photo"
                android:contentDescription="@string/todo" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextBodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_laundry"
                    android:textColor="@color/colorBlack" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_5"
                    android:contentDescription="@string/todo"
                    android:background="@drawable/ic_required" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr_nama_laundry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_default"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama_laundry"
                    style="@style/TextMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_15"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="cth: Laundry Bersama"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="30"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:text="@string/alamat"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:id="@+id/lr_alamat_laundry"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border_default"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_alamat_laundry"
                    style="@style/TextMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_15"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:hint="@string/masukkan_alamat"
                    android:inputType="textMultiLine"
                    android:lineSpacingMultiplier="1"
                    android:maxLength="150"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_daftar_laundry"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/margin_20"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/buat_laundry_sekarang"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>